--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ h1 {
     border: solid 2px #212427;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .filho {
@@ -39,10 +39,12 @@ h1 {
 
 .cor2 {
     background-color: #63B1BC;
+    margin-left: 16%;
 }
 
 .cor3 {
     background-color: #EFB661;
+    margin-left: 8%;
 }
 
 .instrucoes {
